sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/Opportunity_Toilet_Location__c.object-meta.xml
<CustomObject>
    <description>The locations there opportunities set up toilets</description>
    <label>Opportunity Toilet Location</label>
    <nameField>
        <displayFormat>OTL-{0000}</displayFormat>
        <label>Opportunity Toilet Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Toilet Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>