sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/fields/Existing_Location__c.field-meta.xml
<CustomField>
    <fullName>Existing_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>States whether this location is existing or not.</description>
    <label>Existing Location</label>
    <type>Checkbox</type>
</CustomField>