sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm</label>
    <type>Checkbox</type>
</CustomField>