sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Opportunity Toilet Locations</relationshipLabel>
    <relationshipName>Opportunity_Toilet_Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>