sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/fields/No_of_Kiva_FLTs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Kiva_FLTs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of KIVA funded FLTs</description>
    <inlineHelpText>The number of KIVA funded FLTs</inlineHelpText>
    <label>No. of Kiva FLTs</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>