sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/fields/No_of_Toilets__c.field-meta.xml
<CustomField>
    <fullName>No_of_Toilets__c</fullName>
    <label>No. of Toilets</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>