sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <label>Payment Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Kiva</fullName>
            </value>
            <value>
                <fullName>Kiva &amp; FLI</fullName>
            </value>
            <value>
                <fullName>FLI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>