sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/validationRules/Ensure_that_payment_option_is_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_that_payment_option_is_not_empty</fullName>
    <active>true</active>
    <description>Ensure that payment option is not empty</description>
    <errorConditionFormula>ISPICKVAL(Payment_Option__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Payment_Option__c</errorDisplayField>
    <errorMessage>Payment option has to be set to the corrent choice</errorMessage>
</ValidationRule>