sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/validationRules/KIVA_and_FLI_payment_option_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>KIVA_and_FLI_payment_option_validation</fullName>
    <active>true</active>
    <description>Ensure that if payment option is Kiva &amp; FLI, both FLI toilets and Kiva toilets contain values</description>
    <errorConditionFormula>AND(
(ISPICKVAL(Payment_Option__c, &#39;Kiva &amp; FLI&#39;)),
OR( 
No_of_FLI_FLTs__c =0,
No_of_Kiva_FLTs__c =0 

))</errorConditionFormula>
    <errorMessage>Specify the value of both the No. of FLI toilets and No. of Kiva toilets if the payment option is   Kiva &amp; FLI.</errorMessage>
</ValidationRule>