sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/validationRules/Opportunity_Toilet_Location_Upfront.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Toilet_Location_Upfront</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Payment_Option__c, &#39;Upfront&#39;),
OR(
 NOT(No_of_FLI_FLTs__c  = 0),
 NOT(No_of_Kiva_FLTs__c  = 0)
))</errorConditionFormula>
    <errorMessage>No. of FLI FLTs and KIVA FLTs should be set to 0 for upfront payment</errorMessage>
</ValidationRule>