sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/validationRules/Validate_FLI_choice.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_FLI_choice</fullName>
    <active>true</active>
    <description>Ensure that when FLI is chosen, the KIVA field remains zero</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Payment_Option__c, &#39;FLI&#39;), 
NOT(No_of_Kiva_FLTs__c = 0) 
)</errorConditionFormula>
    <errorMessage>No. of KIVA toilets has to be zero when payment option is FLI</errorMessage>
</ValidationRule>