sfSandBoxCode/force-app/main/default/objects/Opportunity_Toilet_Location__c/validationRules/Validate_KIVA_choice.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_KIVA_choice</fullName>
    <active>true</active>
    <description>Ensure that when KIVA is chosen, the FLI field remains zero</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Payment_Option__c, &#39;Kiva&#39;), 
NOT( No_of_FLI_FLTs__c  = 0) 
)</errorConditionFormula>
    <errorMessage>No. of FLI toilets has to be zero when payment option is Kiva</errorMessage>
</ValidationRule>